# Supernovas_Excelrs-Medical-Crew

./: Architecture.docx  README.md  Supernovas excelrs medical crew.pptx  app.py  indeex.html  style.css
Decthon/backend/: app.py
Decthon/backend/static/: script.js  style.css
decthon/: health_report.md
decthon/backend/: app.py
decthon/backend/static/: script.js  style.css
decthon/backend/templates/: index.html
decthon/src/mycrewapp/: crew.py  main.py
excelrs-medical-crew/: health_report.md  pyproject.toml
excelrs-medical-crew/src/mycrewapp/: crew.py
excelrs-medical-crew/src/mycrewapp/config/: agents.yaml  tasks.yaml
excelrs-medical-crew/src/mycrewapp/tools/: __init__.py  custom_tool.py
